Fix leaflet zoom button margin shifts

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4465,10 +4465,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 !important;
 }
 
 .leaflet-touch .leaflet-bar a {
   line-height: 30px;
+  margin: 0 !important;
 }
 
 .leaflet-popup-content-wrapper,
